# CULNIG

./: .gitignore  README.md  dataset.py  prompt.py  pyproject.toml  utils.py
CULNIG/: calc_neuron_score.py  decide_culture_general_neurons.py  decide_culture_specific_neuron.py  decide_random_neuron.py
data/CountryRC/: data.json
eval/: evaluate.py  evaluate_blend_saq.py
eval/lemmatizers/ar/: lemma.py  pyproject.toml
eval/lemmatizers/as/: lemma.py
eval/lemmatizers/az/: lemma.py
eval/lemmatizers/el/: lemma.py  pyproject.toml
eval/lemmatizers/en/: lemma.py  pyproject.toml
eval/lemmatizers/es_am/: lemma_am.py  lemma_es.py  pyproject.toml
eval/lemmatizers/fa/: lemma.py  pyproject.toml
eval/lemmatizers/ha/: lemma.py  pyproject.toml
eval/lemmatizers/id/: lemma.py  pyproject.toml
eval/lemmatizers/ko/: lemma.py  pyproject.toml
eval/lemmatizers/su/: lemma.py  pyproject.toml
eval/lemmatizers/zh/: lemma.py  pyproject.toml
train/: config.yaml  train.py
