[tool.uv]
package = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CULNIG"
version = "0.1.0"
description = "CULNIG: Culture Neuron Identification Pipeline with Gradient-based Scoring"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pandas",
    "numpy>=2.0.0",
    "torch==2.6.0+cu126",   # specify version for your environment
    "transformers==4.51.3",
    "datasets",
    "tqdm",
    "matplotlib",
    "peft",
    "trl",
    "pyyaml",
    "mpi4py",   # if you use multi-gpu
    "deepspeed",
    "psutil>=7.0.0",
    "hf-xet>=1.0.3",
    "wandb>=0.19.10",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
