[tool.uv]
package = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "english_lemmatizer"
version = "0.1.0"
description = "Lemmatize English text using spaCy"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "tqdm",
    "matplotlib",
    "spacy",
    "pip",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
