[tool.uv]
package = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spanish_lemmatizer"
version = "0.1.0"
description = "Lemmatize Spanish text using Spark NLP"
requires-python = ">=3.8,<3.10"
dependencies = [
    "pip",
    "pandas",
    "tqdm",
    "matplotlib",
    "spark-nlp==6.1.2",
    "pyspark==3.3.1",
]
