[tool.uv]
package = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemmatizer"
version = "0.1.0"
description = "Lemmatize text"
requires-python = ">=3.8,<3.12"
dependencies = [
    "pip",
    "pandas",
    "tqdm",
    "matplotlib",
    "numpy<=1.24.3",
]
