[tool.uv]
package = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indonesian_lemmatizer"
version = "0.1.0"
description = "Lemmatize Indonesian test"
requires-python = ">=3.8,<3.10"
dependencies = [
    "pip",
    "pandas",
    "tqdm",
    "matplotlib",
    "nlp_id==0.1.15.0",
    "numpy==1.24.3",
]
